--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/learnifydb
 spring.datasource.username=postgres
 spring.datasource.password=docker
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
